6.06_04
    - Switching to relative dirs for self-building to shorten
      command line lengths.
    - Fixing minor test warning on VMS when compiling ExtUtils::Manifest
    - Skipping STDIN read prompt() tests on 5.5.3.  Can't test due to
      eof() not honor tied handles.

6.06_03 Sat Mar 29 19:44:53 PST 2003
    - Added AUTHOR and ABSTRACT_FROM info for ppd generation.
    - Added echo() method to portably echo text to a file.
    - Worked around 5.8.0 eval 'require Foo::Bar' bug causing MakeMaker
      to think modules weren't installed.
    - Modernized VMS doc_*_install targets
    - Changed some $(PERL) -e "print ..." code to use $(ECHO).
    - Replaced uses of Delete/NoLog/NoConfirm with $(RM_F) in MM_VMS
    - Fixed some duplicate macros making MMS happy.
    - Fixed $ExtUtils::MM_VMS::Revision.  It was just the $VERSION before.
    - Fixed ExtUtils::Command::MM::perllocal_install(), uninstall(),
      warn_if_old_packlist().
    * Pulling File::Spec::VMS::fixpath() and eliminate_macros() into MM_VMS
      as the new cannonical location.  They never should have been in F::S
      in the first place.
    * ExtUtils::Command::eqtime() would truncate the file being equalized!
      Holdover from exclusive .exists usage.
    - Cleaned up hard coded 'echo' and '@' to $(ECHO) and $(NOECHO)
    - $(SAY) is now $(ECHO) on VMS
    - Moved rogue initializations from tools_other() to init_others()
    - Normalized MM_VMS's tools_other() to mostly use its superclass.
    - split_command() was off-by-one when calculating max command line
      lengths causing it to run over on VMS
    - made split_command() a bit smarter, taking into account some macro
      expansion
    - Fixed initialization of OBJECT, DISTNAME and LDFROM on VMS
    - Fixed *_install target uses of File::Spec.
    - Added ExtUtils::MakeMaker::vmsish wrapper around vmsish so MM_VMS
      can be compiled on non-VMS machines.  For testing.